@@ -267,10 +267,12 @@ _pattern_type = type(sre_compile.compile("", 0))
 _MAXCACHE = 512
 def _compile(pattern, flags):
     # internal: compile pattern
-    try:
-        return _cache[type(pattern), pattern, flags]
-    except KeyError:
-        pass
+    bypass_cache = flags & DEBUG
+    if not bypass_cache:
+        try:
+            return _cache[type(pattern), pattern, flags]
+        except KeyError:
+            pass
     if isinstance(pattern, _pattern_type):
         if flags:
             raise ValueError(
@@ -279,9 +281,10 @@ def _compile(pattern, flags):
     if not sre_compile.isstring(pattern):
         raise TypeError("first argument must be string or compiled pattern")
     p = sre_compile.compile(pattern, flags)
-    if len(_cache) >= _MAXCACHE:
-        _cache.clear()
-    _cache[type(pattern), pattern, flags] = p
+    if not bypass_cache:
+        if len(_cache) >= _MAXCACHE:
+            _cache.clear()
+        _cache[type(pattern), pattern, flags] = p
     return p
 
 def _compile_repl(repl, pattern):
